--- a/style/style.css
+++ b/style/style.css
@@ -3,10 +3,17 @@
     color: white;
     text-align: center;
     padding: 5px;
-    margin-bottom: 10px;
+    
 }
 
+
 .search{
-    margin-left: 20px;
-    
+    background-color: lightgray;
+    padding: 20px 40px 10px 40px ;
+
+}
+.jumbotron{
+    background-color: white;
+    border: 1px lightgray;
+    border-radius: 0px;
 }
